load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "decryption.go",
        "encryption.go",
    ],
    importpath = "github.com/logrhythm/siem/internal/pkg/crypto",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "decryption_test.go",
        "encryption_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
